Renamed generator from generator-puppet to generator-puppet-module as generator-puppet is an already existing module on NPM. Relocated CHANGELOG.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generator-puppet",
+  "name": "generator-puppet-module",
   "version": "0.1.0",
   "description": "A Yeoman generator for Puppet modules.",
   "author": "Anthony Lapenna <lapenna.anthony@gmail.com>",
