--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "generator-puppet-module",
   "version": "0.2.0",
   "description": "A Yeoman generator for Puppet modules.",
+  "repository": "deviantony/yeoman-puppet",
   "author": "Anthony Lapenna <lapenna.anthony@gmail.com>",
   "keywords": [
     "yeoman-generator",
